Add switch to url

--- a/src/CSVGEN/API/Dispatch.cls
+++ b/src/CSVGEN/API/Dispatch.cls
@@ -1,6 +1,9 @@
 Class CSVGEN.API.Dispatch Extends %CSP.REST
 {
 
+/// Ignore any writes done directly by the REST method.
+Parameter IgnoreWrites = 0;
+
 /// By default convert the input stream to Unicode
 Parameter CONVERTINPUTSTREAM = 1;
 
@@ -20,26 +23,32 @@ XData UrlMap [ XMLNamespace = "http://www.intersystems.com/urlmap" ]
 /// Get this spec
 ClassMethod import() As %Status
 {
-    #dim %request As %CSP.Request
-    #dim stream As %CSP.BinaryStream
+  #dim %request As %CSP.Request
+  #dim stream As %CSP.BinaryStream
 
   Try {
-    // Get stream
-    set stream = %request.GetMimeData("file")
-    if '$IsObject(stream) {
-      $$$ThrowOnError($$$ERROR(9200,"no file"))
-    }
+
     // Get properties
     set body = %request.Get("body")
     set ^log("body") = body
     if '$d(body) {
       $$$ThrowOnError($$$ERROR(9200,"no parameters"))
     }
-
     set dynaBody = {}.%FromJSON(body)
 
-    $$$ThrowOnError(##class(community.csvgen).StreamToFile(stream,.filename))
-    $$$ThrowOnError(##class(community.csvgen).Generate(filename,dynaBody.separator,dynaBody.tableName))
+    // Get stream
+    set stream = %request.GetMimeData("file")
+    if (('$IsObject(stream)) && ('dynaBody.enableUrl)) {
+      $$$ThrowOnError($$$ERROR(9200,"no file"))
+    }
+    
+    if 'dynaBody.enableUrl{
+      $$$ThrowOnError(##class(community.csvgen).StreamToFile(stream,.filename))
+      $$$ThrowOnError(##class(community.csvgen).Generate(filename,dynaBody.separator,dynaBody.className))
+    } else {
+      $$$ThrowOnError(##class(community.csvgen).GenerateFromURL(dynaBody.url,dynaBody.separator,dynaBody.className))
+    }
+
 
   } Catch ex {
       Return ex.AsStatus()
